# ctxburn

./: .gitignore  README.md  pyproject.toml
src/ctxburn/: __init__.py  cli.py
tests/: test_smoke.py
